--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MegaPelis</string>
+    <string name="card_txt_movie_serie_title">Avengers</string>
+    <string name="card_txt_movie_serie_points">100%</string>
 </resources>
