--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
 
     <string name="menu_item_search">Buscar...</string>
 
+    <string name="card_txt_movie_title">Peliculas</string>
+    <string name="card_txt_image_description">Imagen</string>
+    <string name="card_txt_serie_title">Series</string>
     <string name="card_txt_movie_serie_title">Avengers</string>
     <string name="card_txt_movie_serie_points">100%</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
